# advent-of-code-2022

./: day1.py  day2.py  day3.py  day4.py  day6.py  pyproject.toml
inputs/: day2.txt
